# instaresizer

./: README.md  setup.cfg  setup.py
src/instaresizer/: instaresizer  instasize.py
