[metadata]
name = instaresizer
version = 0.0.1
author = Roshan
author_email = roshan@secvibe.com
description = Resize images to an optimal aspect ratio supported by Instagram for upload. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roshanpty/instaresizer
project_urls =
    Bug Tracker = https://github.com/roshanpty/instaresizer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src